# printf

./: #ft_f#  #ft_retnbr_float.c#  .#ft_f  CMakeLists.txt  Makefile  README.md  a.out  author  ft_binar.c  ft_declima.c  ft_flags.c  ft_float.c  ft_itoa_baseld.c  ft_obnul_flags.c  ft_octal.c  ft_pars.c  ft_percent.c  ft_printf  ft_printf.c  ft_ptr.c  ft_putcharn.c  ft_putnbrf.c  ft_putnbrll.c  ft_putnbrlln.c  ft_putnbrn.c  ft_putnbrn.c~  ft_putstrn.c  ft_retnbr_float.c  ft_strjoinfree.c  ft_uitoa_base.c  ft_uitoa_base.c~  libftprintf.h  main.c  printf.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_list_last.c  ft_list_size.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsplit.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+28 more)
